# elb-tuto

./: Makefile  README.md  samconfig.toml
.aws/templates/: ci-out.yml  continuous-integration.yml
todo-app/: Dockerfile  pyproject.toml
todo-app/src/: app.py
todo-app/src/error/: not_found_error.py
todo-app/src/models/: abstract_table_model.py  todo.py  todo_status.py
todo-app/src/repositories/: dynamodb_repository.py  todo_repository.py
todo-app/src/services/: todo_service.py
todo-app/src/utils/: logging_utils.py
todo-app/tests/unit/: conftest.py
todo-app/tests/unit/models/: sample_model.py  test_sample_model.py
todo-app/tests/unit/repositories/: test_dynamodb_repository.py
